# artifact-builder

./: .gitignore  Dockerfile  Dockerfile.cgr  LICENSE  MCP-SERVERS-COMPATIBILITY.md  README.md  SIMPLE-PYTHON-OCI.md  UV-BUILD-GUIDE.md  pyproject.toml
.github/workflows/: build-and-push-oci.yml  build-mcp-server.yml  build-oci-uv.yml  simple-python-oci.yml
scripts/: generic-mcp-oci-build.yml.template  pull-and-run-oci.sh  pull-artifact.sh  simple-pull-run.sh  universal-mcp-builder.py  uv-mcp-builder.py
src/mise_tasks_mcp/: __init__.py  __main__.py  server.py
src/mise_tasks_mcp/utils/: __init__.py  command.py  validator.py
tests/: test_edge_cases.py  test_integration.py  test_server.py
