[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mise-tasks-mcp"
version = "0.1.0"
description = "MCP server for mise tasks and configuration management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Capten.ai", email = "info@capten.ai"},
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
mise-tasks-mcp = "mise_tasks_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]